--- a/faq.html
+++ b/faq.html
@@ -36,8 +36,7 @@
                                         <li class="nav-item"><a class="nav-link" href="delivery-schedule.html">Delivery Schedule</a></li>
                                         <li class="nav-item"><a class="nav-link" href="business-days.html">Settings</a></li>
                                         <li class="nav-item"><a class="nav-link" href="pickup-locations.html">Pickup Locations</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="field-appearance.html">Appearance</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="google-calendar-sync.html">Integrations</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="label-message.html">Appearance</a></li>                                        <li class="nav-item"><a class="nav-link" href="google-calendar-sync.html">Integrations</a></li>
                                         <li class="nav-item"><a class="nav-link" href="delivery-calendar.html">Delivery Calender</a></li>
                                     </ul>
                                 </div>
