--- a/send-reminder.html
+++ b/send-reminder.html
@@ -34,12 +34,15 @@
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarNav">
                                     <ul class="navbar-nav menu nav-menu">
-                                        <li class="nav-link active"><a class="nav-link" href="welcome-page.html">ORDD Home</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="delivery-schedule.html">Delivery Schedule</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="business-days.html">Settings</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="pickup-locations.html">Pickup Locations</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="field-appearance.html">Appearance</a></li>
+                                        <li class="nav-link active"><a class="nav-link" href="welcome-page.html">Home</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="common-schedule-settings.html">Settings</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="label-message.html">Appearance</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="bulk-booking.html">Bulk Booking</a></li>
                                         <li class="nav-item"><a class="nav-link" href="google-calendar-sync.html">Integrations</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="Addons.html">Addons</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="booking-calendar.html">Booking Calendar</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="holiday.html">Holiday</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="create-booking.html">Create Booking</a></li>
                                         <li class="nav-item"><a class="nav-link" href="delivery-calendar.html">Delivery Calender</a></li>
                                     </ul>
                                 </div>
@@ -66,7 +69,6 @@
                                 <li><a href="welcome-page.html">Welcome</a></li>
                                 <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="plugins-license.html">Plugins License</a></li>
-                                <li><a href="tools.html">Tools</a></li>
                                 <li class="current-menu-item"><a href="send-reminder.html">Send Reminder</a></li>
                             </ul>
                         </div>
