--- a/Zoom meetings.html
+++ b/Zoom meetings.html
@@ -32,12 +32,15 @@
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarNav">
                                     <ul class="navbar-nav menu nav-menu">
-                                        <li class="nav-link"><a class="nav-link" href="welcome-page.html">ORDD Home</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="business-days.html">Settings</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="pickup-locations.html">Pickup Locations</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="field-appearance.html">Appearance</a></li>
+                                        <li class="nav-link"><a class="nav-link" href="welcome-page.html">Home</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="common-schedule-settings.html">Settings</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="label-message.html">Appearance</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="bulk-booking.html">Bulk Booking</a></li>
                                         <li class="nav-item active"><a class="nav-link" href="google-calendar-sync.html">Integrations</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="delivery-calendar.html">Delivery Calender</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="Addons.html">Addons</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="booking-calendar.html">Booking Calendar</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="holiday.html">Holiday</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="create-booking.html">Create Booking</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -61,7 +64,7 @@
                         <div class="secondary-nav-wrap">
                             <ul>
                                 <li class="current-menu-item"><a href="google-calendar-sync.html">Google Sync</a></li>
-                                <li><a href="integrations-settings.html">Zoom Meeting</a></li>
+                                <li><a href="zoom-meetings">Zoom Meeting</a></li>
                             </ul>
                         </div>
                         <!-- Secondary Navigation - End -->
