--- a/Zoom meetings.html
+++ b/Zoom meetings.html
@@ -63,8 +63,8 @@
                         <!-- Secondary Navigation -->
                         <div class="secondary-nav-wrap">
                             <ul>
-                                <li class="current-menu-item"><a href="google-calendar-sync.html">Google Sync</a></li>
-                                <li><a href="zoom-meetings">Zoom Meeting</a></li>
+                                <li ><a href="google-calendar-sync.html">Google Sync</a></li>
+                                <li class="current-menu-item"><a href="zoom-meetings">Zoom Meeting</a></li>
                             </ul>
                         </div>
                         <!-- Secondary Navigation - End -->
