Fixed the changes of all the pages

--- a/Addons.html
+++ b/Addons.html
@@ -64,7 +64,7 @@
                         <div class="secondary-nav-wrap">
                             <ul>
                                 <li class="current-menu-item"><a href="Partial.html">Partial Deposits</a></li>
-                                <li class="current-menu-item"><a href="seasonal-price.html">Seaosnal Price</a></li>
+                                <li class="current-menu-item"><a href="seasonal-pricing.html">Seasonal Pricing</a></li>
                                 
                             </ul>
                         </div>
@@ -235,7 +235,7 @@
                     <div class="col-md-12">
                         <div class="footer-wrap">
                             <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                                <img class="msg-icon" src="assets/images/icon-info-grey.svg" alt="Logo" /><a href="#">Get our Subscriptions Addon</a> & setup recurring deliveries with WooCommerce Subscriptions plugin & Order Delivery Date plugin.
+                                <img class="msg-icon" src="assets/images/icon-info-grey.svg" alt="Logo" /><a href="#">Get our Subscriptions Addon</a> & setup recurring deliveries with WooCommerce Subscriptions plugin & Booking Delivery Date plugin.
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
