--- a/faq.html
+++ b/faq.html
@@ -63,7 +63,6 @@
                                 <li><a href="welcome-page.html">Welcome</a></li>
                                 <li class="current-menu-item"><a href="faq.html">FAQ</a></li>
                                 <li><a href="plugins-license.html">Plugins License</a></li>
-                                <li><a href="tools.html">Tools</a></li>
                                 <li><a href="send-reminder.html">Send Reminder</a></li>
                             </ul>
                         </div>
@@ -314,7 +313,7 @@
                     <div class="col-md-12">
                         <div class="footer-wrap">
                             <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                                <img class="msg-icon" src="assets/images/icon-info-grey.svg" alt="Logo" /><a href="#">Get our Subscriptions Addon</a> & setup recurring deliveries with WooCommerce Subscriptions plugin & Order Delivery Date plugin.
+                                <img class="msg-icon" src="assets/images/icon-info-grey.svg" alt="Logo" /><a href="#">Get our Subscriptions Addon</a> & setup recurring deliveries with WooCommerce Subscriptions plugin & Booking Delivery Date plugin.
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
