--- a/send-reminder.html
+++ b/send-reminder.html
@@ -43,7 +43,6 @@
                                         <li class="nav-item"><a class="nav-link" href="booking-calendar.html">Booking Calendar</a></li>
                                         <li class="nav-item"><a class="nav-link" href="holiday.html">Holiday</a></li>
                                         <li class="nav-item"><a class="nav-link" href="create-booking.html">Create Booking</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="delivery-calendar.html">Delivery Calender</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -373,7 +372,13 @@
                                                         <textarea class="ta-sm" placeholder="Hi {customer_first_name}, You have a booking of {product_title} on {start_date}.  Your Order # : {order_number} Order Date : {order_date} Your booking id is: {booking_id}"></textarea>
                                                     </div>
                                                 </div>
-                                            </div>    
+                                            </div>
+                                            <div class="tm1-row bdr-0 pt-0">
+                                                <div class="col-left"></div>
+                                                <div class="col-right sb-wrap">
+                                                    <input class="secondary-btn" type="submit" name="" value="Save Setings">
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -411,6 +416,12 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="tm1-row bdr-0 pt-0">
+                                                <div class="col-left"></div>
+                                                <div class="col-right sb-wrap">
+                                                    <input class="secondary-btn" type="submit" name="" value="send">
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -429,7 +440,7 @@
                     <div class="col-md-12">
                         <div class="footer-wrap">
                             <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                                <img class="msg-icon" src="assets/images/icon-info-grey.svg" alt="Logo" /><a href="#">Get our Subscriptions Addon</a> & setup recurring deliveries with WooCommerce Subscriptions plugin & Order Delivery Date plugin.
+                                <img class="msg-icon" src="assets/images/icon-info-grey.svg" alt="Logo" /><a href="#">Get our Subscriptions Addon</a> & setup recurring deliveries with WooCommerce Subscriptions plugin & Booking Delivery Date plugin.
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
