Fixed all the pages link

--- a/welcome-page.html
+++ b/welcome-page.html
@@ -67,6 +67,7 @@
                                 <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="plugins-license.html">Plugins License</a></li>
                                 <li><a href="send-reminder.html">Send Reminder</a></li>
+                                <li><a href="status.html">Status</a></li>
                             </ul>
                         </div>
                         <!-- Secondary Navigation - End -->
