--- a/send-reminder.html
+++ b/send-reminder.html
@@ -69,6 +69,7 @@
                                 <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="plugins-license.html">Plugins License</a></li>
                                 <li class="current-menu-item"><a href="send-reminder.html">Send Reminder</a></li>
+                                <li><a href="status.html">Status</a></li>
                             </ul>
                         </div>
                         <!-- Secondary Navigation - End -->
