Fixed time format option

--- a/calendar-appearance.html
+++ b/calendar-appearance.html
@@ -121,7 +121,7 @@
                                                         <div class="rc-flx-wrap flx-aln-center">
                                                             <img class="tt-info" src="assets/images/icon-info.svg" alt="Info" data-toggle="tooltip" data-placement="top" title="Tooltip content goes here">
                                                             <select class="ib-md">
-                                                                <option>Fri, Apr 15,2022</option>
+                                                                <option>Fri, Apr 15, 2022</option>
                                                                 <option>Show calender always close</option>
                                                             </select>
                                                         </div>
@@ -136,8 +136,7 @@
                                                         <div class="rc-flx-wrap flx-aln-center">
                                                             <img class="tt-info" src="assets/images/icon-info.svg" alt="Info" data-toggle="tooltip" data-placement="top" title="Tooltip content goes here">
                                                             <select class="ib-md">
-                                                                <option>English UK</option>
-                                                                <option>English</option>
+                                                                <option>24 Hours</option>
                                                             </select>
                                                         </div>
                                                     </div>
