Fixed Time format  and Date format option

--- a/calendar-appearance.html
+++ b/calendar-appearance.html
@@ -122,7 +122,10 @@
                                                             <img class="tt-info" src="assets/images/icon-info.svg" alt="Info" data-toggle="tooltip" data-placement="top" title="Tooltip content goes here">
                                                             <select class="ib-md">
                                                                 <option>Fri, Apr 15, 2022</option>
-                                                                <option>Show calender always close</option>
+                                                                <option>Thu, May 20, 2022</option>
+                                                                <option>Sun, Jun 06, 2022</option>
+                                                                <option>Thu, July 04, 2022</option>
+                                                                
                                                             </select>
                                                         </div>
                                                     </div>
